transition width fix but still blinks on ios

--- a/cordova/platforms/ios/www/styles/main.styl
+++ b/cordova/platforms/ios/www/styles/main.styl
@@ -753,7 +753,7 @@ form
   display:inline
   right:8px
   top:9px
-  color:colorInputIcon
+  color:colorFontGrey
 
 .left-input-icon
   position:absolute
@@ -1094,13 +1094,14 @@ form
 .onoffswitch-inner:before 
     content: "Expense"
     padding-left: 10px
-    background-color: #47C95D; color: #FFFFFF
+    background-color: #D66C42
+    color: #FFFFFF
 
 .onoffswitch-inner:after
     content: "Income"
     padding-left: 33px
-    background-color: #EEEEEE
-    color: #999999
+    background-color: #47C95D
+    color: #FFF
     text-align: left
 
 .onoffswitch-switch 
